[BUGFIX] Node tree filter too wide in Firefox
Releases: master, 1.0
Reviewed-on: https://review.typo3.org/26651
Tested-by: Aske Ertmann
Tested-by: Mattias Nilsson
Tested-by: Karsten Dambekalns
Original-Commit-Hash: 07629165d7801a70247a1b5ef80b4a467f306344

--- a/TYPO3.Neos/Resources/Private/Styles/Navigate/_NodeTree.scss
+++ b/TYPO3.Neos/Resources/Private/Styles/Navigate/_NodeTree.scss
@@ -297,6 +297,7 @@
 
 			select {
 				width: 100%;
+				padding: 0;
 			}
 		}
 	}
